// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render Signature component render component with props 1`] = `
<div
  className="sign"
>
  Vova
</span>
`;

exports[`render Signature component render component without props 1`] = `
<div
  className="sign"
>
  Vova Pekun
</span>
`;
